--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@ashthornton/asscroll": "^2.0.11",
     "events": "^3.3.0",
+    "gsap": "^3.11.0",
+    "lil-gui": "^0.17.0",
+    "scroll-trigger": "^1.0.0",
     "three": "^0.143.0",
     "vite": "^3.0.7"
+  },
+  "dependencies": {
+    "GSAP": "npm:gsap@^3.11.0"
   }
 }
